--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -29,7 +29,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: test
-      run: ant -noinput -buiildfile build.xml build-using-appjson download-app-using-buildid
+      run: ant -noinput -buildfile build.xml build-using-appjson download-app-using-buildid 
+      
     - name: Building app executable using application json 
       run: ant -noinput -buildfile build.xml build-using-appjson download-app-using-buildid -DCLIENT_ID=$CLIENT_ID -DCLIENT_SECRET=$CLIENT_SECRET -DAPP_ID=$APP_ID -DTARGET_OS=$TARGET_OS -DTARGET_ARCH=$TARGET_ARCH -DEXECUTABLE_NAME=$EXECUTABLE_NAME -DAPP_JSON=$APP_JSON
     - name: Downloading application 
