--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,8 +22,11 @@ jobs:
       EXECUTABLE_NAME: orderRetrieveOrchestrator
       TARGET_ARCH: amd64
       TARGET_OS: linux
-      CONTAINER_NAME: order-retrieve-orchestrator
-      CONTAINER_TAG: latest
+      SRC_CONTAINER_NAME: order-retrieve-orchestrator
+      SRC_CONTAINER_TAG: v1.0.0
+      TARGET_CONTAINER_NAME: order-retrieve-orchestrator
+      TARGET_CONTAINER_TAG: v1.0.0
+      
     runs-on: self-hosted
     
     steps:
