--- a/build.xml
+++ b/build.xml
@@ -263,9 +263,9 @@
         <exec executable="docker">
             <arg value="login"/>
             <arg value="-u"/>
-            <arg value="${registy_username"/>
+            <arg value="${registy_username}"/>
             <arg value="-p"/>
-            <arg value="${registry_password"/>
+            <arg value="${registry_password}"/>
             <arg value="${registry_server}"/>
         </exec>
         
