--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -14,7 +14,7 @@ jobs:
     env:
       CLIENT_ID: ${{secrets.CLIENT_ID}}
       CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
-      REGISTRY_USERNAME: mmussett
+      REGISTRY_USERNAME: ${{secrets.REGISTRY_USERNAME}}
       REGISTRY_PASSWORD: f1rest0rm
       REGISTRY_SERVER: registry.vmlab.live
       APP_ID: dnqcj37vr75gcqpwmrg4nthgro5xyuht
